# sgl-wrapper

./: .gitignore  CMakeLists.txt  README.md
cmake/Modules/: FindGLEW.cmake
include/: BoundingBox.h  BoundingSphere.h  Camera.h  Color.h  Entity.h  FrameBuffer.h  Geometry.h  IGLBuffer.h  IndexBufferObject.h  Intersector.h  Matrix4.h  Model.h  Ray.h  RenderBuffer.h  RenderableEntity.h  SGL.h  SGLException.h  SGLExport.h  ShaderProgram.h  StaticModel.h  StaticModelFactory.h  Texture.h  UV.h  Vector3f.h  VertexAttribute.h  VertexAttributeSet.h
include/SGL/: ArrayBuffer.h  Buffer.h  Camera.h  Entity.h  Exception.h  FrameBuffer.h  Geometry.h  IGLBuffer.h  InstanceMesh.h  Intersector.h  Material.h  Mesh.h  MeshGenerator.h  Model.h  Picking.h  RenderBuffer.h  SGL.h  SGLCoordinate.h  SGLException.h  SGLExport.h  ShaderProgram.h  Sprite.cpp  Sprite.h  SpriteBatch.h  SpriteSheet.h  Texture.h  Uniform.h  VertexArray.h  VertexAttribute.h  VertexBuffer.h
include/SGL/2D/: BitmapFont.h  Sprite.h  SpriteBatch.h  SpriteSheet.h  Text.h
include/SGL/GL/: Buffer.h  FrameBuffer.h  InstanceMesh.h  Mesh.h  PropertyShader.h  RenderBuffer.h  ShaderProgram.h  Texture.h  Uniform.h  VertexArray.h  VertexAttribute.h
include/SGL/Graphics/: BitmapFont.h  Color.h  Sprite.h  SpriteBatch.h  Text.h
include/SGL/Math/: AABB.h  Frustum.h  Math.h  MathUtil.h  Matrix2.h  Matrix3.h  Matrix4.h  Plane.h  Ray.h  Rect.h  Sphere.h  Vector2.h  Vector3.h  Vector4.h
include/SGL/Type/: GLTypes.h  Geometry.h  Light.h  Material.h
include/SGL/Util/: Bitmap.h  Camera.h  Context.h  DebugRenderer.h  Entity.h  Exception.h  Image.h  MeshBuilder.h  ObjLoader.h  ObjModel.h  OrthographicCamera.h  PerspectiveCamera.h  SGLExport.h
include/SGL/Util/GLSL/: GLSL_Position_Color.h  GLSL_Position_TexCoord.h  GLSL_Position_TexCoord_Color.h
include/SGL/Wrapper/: Buffer.h  FrameBuffer.h  InstanceMesh.h  Mesh.h  ModelAsset.h  PropertyShader.h  RenderBuffer.h  ShaderProgram.h  Texture.h  Uniform.h  VertexArray.h
src/: ArrayBuffer.cpp  BoundingBox.cpp  BoundingSphere.cpp  Buffer.cpp  Camera.cpp  Entity.cpp  Exception.cpp  FrameBuffer.cpp  Geometry.cpp  IGLBuffer.cpp  IndexBufferObject.cpp  InstanceMesh.cpp  Intersector.cpp  Mesh.cpp  MeshGenerator.cpp  Model.cpp  RenderBuffer.cpp  RenderableEntity.cpp  SGL.cpp  SGLCoordinate.cpp  SGLException.cpp  ShaderProgram.cpp  Sprite.cpp  SpriteBatch.cpp  SpriteSheet.cpp  StaticModel.cpp  StaticModelFactory.cpp  Texture.cpp  Uniform.cpp  VertexArray.cpp  VertexAttribute.cpp  VertexAttributeSet.cpp  VertexBuffer.cpp
src/2D/: BitmapFont.cpp  Sprite.cpp  SpriteBatch.cpp  SpriteSheet.cpp  Text.cpp
src/GL/: Buffer.cpp  FrameBuffer.cpp  InstanceMesh.cpp  Mesh.cpp  PropertyShader.cpp  RenderBuffer.cpp  ShaderProgram.cpp  Texture.cpp  Uniform.cpp  VertexArray.cpp
src/Graphics/: BitmapFont.cpp  Color.cpp  Sprite.cpp  SpriteBatch.cpp  Text.cpp
src/Math/: AABB.cpp  Frustum.cpp  Matrix2.cpp  Matrix3.cpp  Matrix4.cpp  Plane.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
src/Util/: Bitmap.cpp  Camera.cpp  Context.cpp  DebugRenderer.cpp  Entity.cpp  Exception.cpp  Geometry.cpp  Image.cpp  ObjLoader.cpp  ObjModel.cpp  OrthographicCamera.cpp  PerspectiveCamera.cpp  SGLCoordinate.cpp  picopng.cpp
src/Wrapper/: Buffer.cpp  FrameBuffer.cpp  InstanceMesh.cpp  Mesh.cpp  PropertyShader.cpp  RenderBuffer.cpp  ShaderProgram.cpp  Texture.cpp  Uniform.cpp  VertexArray.cpp
